# Dragon

./: .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  UseDragon.cmake  UseDragonLibs.cmake  UseDragonSubdirectoryBuild.cmake  build.bat  package_dragon.py
.cmake/: DragonGetVersionNumber.info
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/actions/: build.yml  get_deps.yml
.github/actions/cd/: action.yml
.github/actions/get_deps/: action.yml
.github/workflows/: build_dragon.yml  build_linux_makefile.yml  build_windows_msvc.yml  build_windows_msvc_12.yml  build_windows_msvc_14.yml  build_windows_msvc_15.yml  build_windows_msvc_16.yml  build_windows_msvc_17.yml  cmake.yml  cmake_linux.yml  cmake_macos.yml  cmake_windows.yml  codeql.yml
binary_out/: Dragon.exp  OpenAL32.exp
cmake/: bin2h.cmake
docs/: CMakeLists.txt  Doxyfile  Doxyfile.in  header.html
docs/res/: main.dox
enc_temp_folder/33ffdc991e9385a6f07a263aa5f4b/: open_window.cpp
headers/: CMakeLists.txt
headers/include/dragon/: DGAPIdef.h  Dragon.h  Dragon.hpp  dgEngine.h  dg_icl.h
headers/include/dragon/graphics/: Object.h  UIElement.h  WindowCreateParams.h  dgBaseObj.h  dgWindowCreateParams.h  predef.h  shaders.h  window.h
include/dragon/: BoostInclude.h  CMakeLists.txt  Dragon.h  GPU.h  camera.hpp  config.h  config.hpp  createInfos.hpp  dgEngine.h  dragon.h  dragon.hpp  dragon_core.h  dragon_core.h.in  dragon_core.hpp.in  dyload.hpp  engine.h  engine.hpp  frag.hpp  gpu.h  gpu.hpp  gpu_queue_families.h  gpu_queue_families.hpp  init.hpp  internal.hpp  message.hpp  model.hpp  model_create_info.hpp  predef.h  result.h  result.hpp  shaders.hpp  swap_chain_support.hpp  uiElement.hpp  validation.hpp  vert.hpp  vertex.hpp  vulkan_debug.h  vulkan_debug.hpp  window.h  window.hpp  (+2 more)
include/dragon/audio/: engine.h  engine.hpp  outputDevice.h  outputDevice.hpp
include/dragon/cl/: engine.h  engine.hpp
include/dragon/cl/physics/: engine.h  engine.hpp
include/dragon/compute/: engine.h
include/dragon/graphics/: Object.h  UIElement.h  Window.h  WindowCreateParams.h  dgBaseObj.h  engine.h  engine.hpp  init.h  init.hpp
include/dragon/graphics/particle/: engine.h  engine.hpp
include/dragon/graphics/xr/: engine.h  engine.hpp
include/dragon/internal/: createInfo.h  createInfo.hpp  engine.h  engine.hpp  gpu.h  gpu.hpp  init.h  init.hpp  vector.h
include/dragon/message/: callbacks.h  callbacks.hpp  engine.h  engine.hpp
include/dragon/particle/: engine.h
include/dragon/physics/: engine.h
include/dragon/predef/: al.h  arch.h  architecture.h  compiler.h  core.hpp  core.hpp.in  graphics.h  language.h  make.h  opencl.h  os.h  other.h  platform.h  predef.h  sli.h  version.h  version_number.h
include/dragon/predef/architecture/: arm.h  x86.h
include/dragon/predef/compiler/: clang.h  gcc.h  gcc_xml.h  llvm.h  visualc.h
include/dragon/predef/detail/: comp_detected.h  os_detected.h
include/dragon/predef/language/: cuda.h  objc.h  stdc.h  stdcpp.h
include/dragon/predef/os/: cygwin.h  ios.h  linux.h  macos.h  windows.h
include/dragon/predef/other/: wordsize.h
include/dragon/thread/: xtime.hpp
include/dragon/xr/: engine.h
lib/: CMakeLists.txt  dragon_include_lib.hpp  helper.cmake
lib/SPIRV/: CMakeLists.txt
lib/Vulkan/: CMakeLists.txt
src/: CMakeLists.txt  Dragon.cpp  GPU.cpp  dgEngine.cpp  dgVersionInfo.cpp  engine.cpp  engine_close.cpp  engine_init.cpp  engine_runtime.cpp  gpu.cpp  gpu_close.cpp  gpu_init.cpp  gpu_init.h  gpu_init.hpp  init.cpp  initialization.cpp  internal.cpp  internal.hpp  model.cpp  model_close.cpp  model_init.cpp  uiElement.cpp  validation.cpp  vertex.cpp  vk_literals.cpp  window.cpp  window_camera.hpp  window_close.cpp  window_init.cpp  window_pipeline.hpp  window_runtime.cpp
src/AMD64/windows/: dgEngine.cpp
src/AMD64/windows/graphics/: window.cpp
src/graphics/: Window.cpp  engine.c  engine.cpp  object.cpp  window.cpp
src/include/dragon/: dgBackendInclude.hpp  dragon10.hpp  internal.hpp
src/internal/: gpu.c  init.c  init.cpp  vector.c
src/message/: callbacks.c  callbacks.cpp
src/object/: dgObject.hpp
src/shaders/: 3d.frag.in  3d.simple.vert.in  3d.vert.in  shader.frag.in  shader.vert  shader.vert.in
src/video/: dgAsyncWindow.hpp  dgVideoInclude.hpp  dgWindow.cpp  dgWindow.hpp
src_1/graphics/: engine.cpp
src_1/message/: CMakeLists.txt
t/tests/: dgVersion.cpp
tests/: CMakeLists.txt  dgWindowOpenTest.cpp  openWindow.cpp
tools/cmake/: DragonConfig.cmake.in  FindDragon.cmake  boost_helper_install.cmake  build_vars.cmake  dragon.pc.in  install.cmake
tools/dgInstaller/: dgInstaller.py
tools/installer/: __main__.py  build.py  frames.py  install.py  main.py  package_dragon.py  post_build.py  utils.py
tools/tests/: CMakeLists.txt  compute_test.cpp  dgVersion.cpp  dginfo.cpp  dragon_audio_test.cpp  dragon_open_window.cpp  general.hpp  openWindow.cpp  open_window.cpp  small_game.cpp  triangleTest.cpp  unit_test.cpp  unit_test_eval_functions.cpp
tools/vulkan_sdk/: CMakeLists.txt  vulkan.json
tools_1/installer/: download_info.json  installerGUI.py  utils.py
tools_1/tests/: audioTest.cpp
