set(SKIP_PERFORMANCE_COMPARISON ON)

set(BOOST_ENABLE_PYTHON ON)
set(BOOST_ENABLE_MPI OFF)
set(Boost_USE_STATIC_LIBS OFF)
set(Boost_USE_MULTITHREADED ON)
set(Boost_USE_STATIC_RUNTIME OFF)

add_subdirectory(OpenAL-Soft)

add_subdirectory(glfw)

add_subdirectory(glm)
set(GLM_INCLUDE_DIRECTORIES
	${CMAKE_CURRENT_SOURCE_DIR}/glm
)